# terpene-mcp-server

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  create_structure.sh  pyproject.toml  verify_structure.sh
src/terpene_vocabulary/: __init__.py  __main__.py  handler.py  server.py
tests/: __init__.py  run_tests.sh
tests/integration/: test_workflows.py
tests/unit/: test_database.py
